add counter-service and fix bugs